added input name(s)

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 </script>
     <pre>
         <h1>avatar generator</h1>
-            input name <input type="text" id="n"><br>
+            input name(s) <input type="text" id="n"><br>
             <input type="button" value="submit" id="button">
         <div id="results"></div>
     </pre>
